#6341: Penscratch 2: Fix button borders on Safari

--- a/penscratch-2/css/blocks.css
+++ b/penscratch-2/css/blocks.css
@@ -222,7 +222,6 @@ p.has-drop-cap:not(:focus)::first-letter {
 	cursor: pointer;
 	border: 1px solid #ccc;
 	border-color: #ccc #ccc #bbb #ccc;
-	-webkit-appearance: button;
 }
 
 .wp-block-button__link {
